// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicSearchInput Component DynamicSearchInput handles change 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-6-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change 2`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      >
        <span
          id="aria-selection"
        />
        <span
          id="aria-context"
        >
            Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
        </span>
      </span>
      <div
        class=" css-1tkmbhg-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-1pndypt-Input"
            data-value="option 2"
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-describedby="react-select-6-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-6-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value="option 2"
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="icon gds-loader size-1x dynamic-search-spinner"
              data-testid="DATA-TEST-ID-spinner"
              focusable="false"
              height="50"
              icon="fal,spinner"
              preserveAspectRatio="xMidYMid"
              role="img"
              style="background: transparent;"
              viewBox="0 0 100 100"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="50"
                cy="50"
                fill="transparent"
                r="30"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="10"
              >
                <animatetransform
                  attributeName="transform"
                  dur="2s"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="rotate"
                  values="0 50 50;180 50 50;720 50 50"
                />
                <animate
                  attributeName="stroke-dasharray"
                  dur="2s"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  values="20 150; 150 20; 20 150"
                />
              </circle>
            </svg>
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class=" css-omztxt"
        >
          <div
            class=" css-26l3qy-menu"
            id="react-select-6-listbox"
          >
            <div
              class="css-bp8cua-ScrollManager"
            />
            <div
              class=" css-4ljt47-MenuList"
            >
              <div
                class=" css-1tfbn7p-LoadingMessage"
              >
                Loading...
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change 3`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 2
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION2"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change clearable 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change to undefined 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-12-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-clear"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change to undefined 2`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-12-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      >
        <span
          id="aria-selection"
        >
          All selected options have been cleared.
        </span>
        <span
          id="aria-context"
        >
            Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
        </span>
      </span>
      <div
        class=" css-1tkmbhg-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-12-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-12-listbox"
              aria-describedby="react-select-12-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-12-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class=" css-omztxt"
        >
          <div
            class=" css-26l3qy-menu"
            id="react-select-12-listbox"
          >
            <div
              class="css-bp8cua-ScrollManager"
            />
            <div
              class=" css-4ljt47-MenuList"
            >
              <div
                class=" css-gg45go-NoOptionsMessage"
              >
                No options
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change with no option string 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change with no option string 2`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      >
        <span
          id="aria-selection"
        />
        <span
          id="aria-context"
        >
            Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
        </span>
      </span>
      <div
        class=" css-1tkmbhg-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-1pndypt-Input"
            data-value="option 2"
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-7-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value="option 2"
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="icon gds-loader size-1x dynamic-search-spinner"
              data-testid="DATA-TEST-ID-spinner"
              focusable="false"
              height="50"
              icon="fal,spinner"
              preserveAspectRatio="xMidYMid"
              role="img"
              style="background: transparent;"
              viewBox="0 0 100 100"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="50"
                cy="50"
                fill="transparent"
                r="30"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="10"
              >
                <animatetransform
                  attributeName="transform"
                  dur="2s"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="rotate"
                  values="0 50 50;180 50 50;720 50 50"
                />
                <animate
                  attributeName="stroke-dasharray"
                  dur="2s"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  values="20 150; 150 20; 20 150"
                />
              </circle>
            </svg>
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class=" css-omztxt"
        >
          <div
            class=" css-26l3qy-menu"
            id="react-select-7-listbox"
          >
            <div
              class="css-bp8cua-ScrollManager"
            />
            <div
              class=" css-4ljt47-MenuList"
            >
              <div
                class=" css-1tfbn7p-LoadingMessage"
              >
                Loading...
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles change with no option string 3`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 2
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION2"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles inputValue change 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-11-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles inputValue change 2`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-11-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 2
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION2"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput handles inputValue change 3`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-11-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-11-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-11-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-qc6sy-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders in error and disabled 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-j5ssuk-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-6gods9-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-lr9fot-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-jzldcf-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-109onse-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders in error without portal 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field input-error"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-ocyqvw-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-10-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-10-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders in readOnly 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only field-highlighted"
    data-testid="DATA-TEST-ID"
  >
    <span
      class="gds-typography"
    >
      option 1
    </span>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders in readOnly without datatestid 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only field-highlighted"
  >
    <span
      class="gds-typography"
    >
      option 1
    </span>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders when resolveValue rejects 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-4-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders with invalid input value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-3-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DynamicSearchInput Component DynamicSearchInput renders without input value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-154lpzf-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="DATA-TEST-ID"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,magnifying-glass"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;
